k8s/nginx.yaml
# Nginx Proxy Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              name: nginx-config
      # initContainers:
      #   - name: init-nginx-config
      #     image: busybox:latest
      #     command:
      #       - sh
      #       - "-c"
      #       - |
      #         envsubst '${REACT_APP_API_URL}' < /etc/nginx/templates/nginx.conf.template > /etc/nginx/nginx.conf
      #         cp /etc/nginx/nginx.conf /mnt/config/
      #     env:
      #       - name: REACT_APP_API_URL
      #         value: "http://backend-service/api" # Flask backend URL
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config

---
# Nginx Proxy Service
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
